@@ -9,6 +9,7 @@ BUG FIXES:
 	- Fix #711: Document that debug-mode yes is used for staying
 	  attached to the supervisor console.
 	- Document verbosity 3 prints more information.
+	- nsd-checkconf warns for master zones with no zonefile statement.
 
 
 4.1.5
